--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
         </dependency>
         -->
         <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-datastore</artifactId>
+            <version>0.11.0-beta</version>
+        </dependency>
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>1.2</version>
