--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,21 @@
             <artifactId>objectify</artifactId>
             <version>${objectify.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.3.1.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts-tiles</artifactId>
+            <version>1.3.8</version>
+        </dependency>
         <!-- [END Objectify_Dependencies] -->
     </dependencies>
 
