DataStore, automatically init New Course / Module / topic/quiz 2

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,14 @@
                 <artifactId>appengine-maven-plugin</artifactId>
                 <version>1.9.49</version>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
