module editing works

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -44,6 +44,17 @@
         <servlet-name>UpdateModuleServlet</servlet-name>
         <url-pattern>/UpdateModuleServlet</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>UpdateModuleName</servlet-name>
+        <servlet-class>cLPackage.UpdateModuleName</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UpdateModuleName</servlet-name>
+        <url-pattern>/UpdateModuleName</url-pattern>
+    </servlet-mapping>
+
+
     <servlet>
         <servlet-name>AddTopicServlet</servlet-name>
         <servlet-class>cLPackage.AddTopicServlet</servlet-class>
