Course Editing Done 2

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -45,6 +45,14 @@
         <url-pattern>/UpdateModuleServlet</url-pattern>
     </servlet-mapping>
     <servlet>
+        <servlet-name>UpdateTopicQuiz</servlet-name>
+        <servlet-class>cLPackage.UpdateTopicQuiz</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>UpdateTopicQuiz</servlet-name>
+        <url-pattern>/UpdateTopicQuiz</url-pattern>
+    </servlet-mapping>
+    <servlet>
         <servlet-name>AddTopicServlet</servlet-name>
         <servlet-class>cLPackage.AddTopicServlet</servlet-class>
     </servlet>
